# oi-balancer

./: .gitignore  pyproject.toml
scripts/: oi_balancer.py
scripts/constants/: constants.json  markets.json
